# apex-edge

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  docker-compose.observability.yml
.github/workflows/: ci.yml  smoke-release.yml
apex-edge/: Cargo.toml
apex-edge/src/: app.rs  http_metrics_layer.rs  lib.rs  main.rs
apex-edge/tests/: auth_http.rs  cors_http.rs  observability_stack.rs  orchestrator_journey.rs  smoke_http.rs  standby_mode.rs  stock_availability_tests.rs
crates/adapters/cloud/: Cargo.toml
crates/adapters/cloud/src/: lib.rs
crates/adapters/fiscal/: Cargo.toml
crates/adapters/fiscal/src/: lib.rs
crates/adapters/hardware/: Cargo.toml
crates/adapters/hardware/src/: lib.rs
crates/adapters/payment/: Cargo.toml
crates/adapters/payment/src/: lib.rs
crates/adapters/tax/: Cargo.toml
crates/adapters/tax/src/: lib.rs
crates/api/: Cargo.toml
crates/api/assets/: swagger-ui.html
crates/api/src/: admin_api.rs  approvals.rs  audit.rs  auth.rs  catalog_categories.rs  catalog_search.rs  customer_search.rs  documents.rs  health.rs  lib.rs  metrics_handler.rs  openapi.rs  orders.rs  pos.rs  pos_handler.rs  returns_handler.rs  role.rs  shifts_handler.rs  stream.rs  sync_status.rs
crates/api/tests/: api_tests.rs  returns_and_shifts.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: approvals.rs  auth.rs  catalog.rs  config.rs  coupons.rs  customers.rs  hq.rs  lib.rs  operations.rs  payments.rs  pos.rs  pricing.rs  printing.rs  promotions.rs  version.rs
crates/contracts/tests/: contracts_tests.rs
crates/domain/: Cargo.toml
crates/domain/src/: cart.rs  coupon_engine.rs  errors.rs  lib.rs  order.rs  pricing.rs  promo_engine.rs  returns.rs  shifts.rs
crates/domain/tests/: domain_tests.rs
crates/giftcards/: Cargo.toml
crates/giftcards/src/: lib.rs
crates/loyalty/: Cargo.toml
crates/loyalty/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs  schema.rs
crates/outbox/: Cargo.toml
crates/outbox/src/: dispatcher.rs  lib.rs
crates/outbox/tests/: outbox_tests.rs
crates/printing/: Cargo.toml
crates/printing/src/: generator.rs  lib.rs  pdf.rs  render.rs
crates/printing/tests/: printing_tests.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 001_init.sql  002_catalog_pricing.sql  003_categories_and_search.sql  004_sync_status.sql  005_inventory.sql  006_print_templates.sql  007_auth.sql  008_catalog_payload.sql  009_coupon_definitions.sql  010_returns.down.sql  010_returns.sql  011_shifts.down.sql  011_shifts.sql  012_audit_chain.down.sql  012_audit_chain.sql  013_approvals.down.sql  013_approvals.sql  014_order_ledger.down.sql  014_order_ledger.sql  015_payment_provider.down.sql  015_payment_provider.sql  016_store_operations.down.sql  016_store_operations.sql  017_gift_cards_loyalty.down.sql  017_gift_cards_loyalty.sql  018_outbox_destinations.down.sql  018_outbox_destinations.sql  019_api_tokens_webhooks.down.sql  019_api_tokens_webhooks.sql  020_stock_movements.down.sql  020_stock_movements.sql
crates/storage/src/: approvals.rs  audit.rs  auth.rs  cart.rs  catalog.rs  categories.rs  config.rs  coupons.rs  customers.rs  documents.rs  idempotency.rs  lib.rs  migrations.rs  operations.rs  orders.rs  outbox.rs  pool.rs  print_templates.rs  promotions.rs  returns.rs  seeds.rs  shifts.rs  stock_movements.rs  sync_status.rs  tax_rules.rs
crates/storage/tests/: crash_recovery_proptest.rs  migration_rollback_matrix.rs  storage_tests.rs
crates/sync/: Cargo.toml
crates/sync/src/: config.rs  conflict.rs  fetch.rs  ingest.rs  lib.rs  progress.rs
crates/sync/tests/: sync_entity_application_tests.rs  sync_server_tests.rs  sync_tests.rs
docs/architecture/: README.md
docs/contracts/: README.md
docs/runbook/: README.md  failover.md
frontend/: .env.local.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.auth.test.tsx  App.tsx  index.css
frontend/src/api/: client.ts  requestTracker.ts  types.ts
frontend/src/api/__tests__/: client.test.ts
frontend/src/panels/: CartPanel.test.tsx  CartPanel.tsx  CatalogPanel.tsx  CheckoutPanel.tsx  ConnectionPanel.tsx  CustomerPanel.tsx  DocumentsPanel.tsx  EventLogPanel.tsx  LookupPanel.tsx  ProductDetailPage.test.tsx  ProductDetailPage.tsx  SyncStatusPanel.tsx
observability/grafana/dashboards/: dependencies-and-data-flows.json  edge-system-health.json  slo-synthetic.json  transaction-journey.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/prometheus/: prometheus.yml
observability/prometheus/rules/: apex-edge-recording.yml
packaging/: README.md
tools/conformance/: Cargo.toml
tools/conformance/src/: main.rs
tools/example-sync-source/: Cargo.toml
tools/example-sync-source/src/: main.rs
tools/fake-hq/: Cargo.toml
tools/fake-hq/src/: lib.rs  main.rs  storage.rs
tools/fake-hq/src/routes/: mod.rs  orders.rs  sync.rs  ui.rs
tools/fake-hq/tests/: fake_hq_tests.rs
tools/synthetic-journey/: Cargo.toml
tools/synthetic-journey/src/: main.rs
