[workspace]
resolver = "2"
members = [
    "crates/contracts",
    "crates/domain",
    "crates/storage",
    "crates/sync",
    "crates/outbox",
    "crates/printing",
    "crates/metrics",
    "crates/adapters/payment",
    "crates/adapters/tax",
    "crates/adapters/hardware",
    "crates/adapters/cloud",
    "crates/adapters/fiscal",
    "crates/giftcards",
    "crates/loyalty",
    "crates/api",
    "apex-edge",
    "tools/example-sync-source",
    "tools/fake-hq",
    "tools/synthetic-journey",
    "tools/conformance",
]
