[package]
name = "apex-edge"
version = "0.5.0"
edition = "2021"

[lib]
name = "apex_edge"
path = "src/lib.rs"

[[bin]]
name = "apex-edge"
path = "src/main.rs"

[dependencies]
apex-edge-api = { path = "../crates/api" }
apex-edge-metrics = { path = "../crates/metrics" }
apex-edge-storage = { path = "../crates/storage" }
apex-edge-sync = { path = "../crates/sync" }
apex-edge-outbox = { path = "../crates/outbox" }
apex-edge-contracts = { path = "../crates/contracts" }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
axum = { version = "0.7", features = ["json"] }
metrics = "0.21"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
apex-edge-contracts = { path = "../crates/contracts" }
apex-edge-storage = { path = "../crates/storage" }
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
