[package]
name = "apex-edge-api"
version = "0.1.0"
edition = "2021"

[dependencies]
apex-edge-contracts = { path = "../contracts" }
apex-edge-domain = { path = "../domain" }
apex-edge-storage = { path = "../storage" }
apex-edge-outbox = { path = "../outbox" }
apex-edge-printing = { path = "../printing" }
axum = { version = "0.7", features = ["json"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
