[package]
name = "apex-edge-contracts"
version = "0.1.0"
edition = "2021"
description = "Canonical POS<->ApexEdge and ApexEdge<->HQ message and data contracts"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
md5 = "0.7"
