[package]
name = "apex-edge-outbox"
version = "0.1.0"
edition = "2021"

[dependencies]
apex-edge-contracts = { path = "../contracts" }
apex-edge-storage = { path = "../storage" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["sync", "time"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
