[package]
name = "apex-edge-printing"
version = "0.1.0"
edition = "2021"

[dependencies]
apex-edge-contracts = { path = "../contracts" }
apex-edge-storage = { path = "../storage" }
metrics = "0.21"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
headless_chrome = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
