[package]
name = "apex-edge-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
apex-edge-contracts = { path = "../contracts" }
tokio = { version = "1", features = ["sync", "fs"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
