[package]
name = "apex-edge-storage"
version = "0.3.0"
edition = "2021"

[dependencies]
apex-edge-contracts = { path = "../contracts" }
apex-edge-metrics = { path = "../metrics" }
metrics = "0.21"
tokio = { version = "1", features = ["sync", "fs"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
proptest = "1.4"
tempfile = "3.10"
