[package]
name = "apex-edge-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
apex-edge-contracts = { path = "../contracts" }
apex-edge-metrics = { path = "../metrics" }
apex-edge-storage = { path = "../storage" }
base64 = "0.22"
metrics = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "time"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
