[package]
name = "apex-edge-conformance"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "apex-edge-conformance"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
