[package]
name = "example-sync-source"
version = "0.1.0"
edition = "2021"
description = "Example NDJSON sync source for ApexEdge; separate tool, contract-only coupling."

[[bin]]
name = "example-sync-source"
path = "src/main.rs"

[dependencies]
apex-edge-contracts = { path = "../../crates/contracts" }
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
