[package]
name = "synthetic-journey"
version = "0.1.0"
edition = "2021"
description = "Continuous synthetic POS journey prober for ApexEdge SLOs."

[[bin]]
name = "synthetic-journey"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
